# uu

./: .gitignore  .map.yaml  Cargo.toml  README.md  VIBECHECK.md
.mana/: 1.1-feat-add-uu-build-subcommand.md  1.2-feat-add-uu-fmt-subcommand.md  1.3-feat-add-uu-lint-subcommand.md  1.4-feat-add-uu-checktypecheck-subcommand.md  1.5-feat-add-uu-ci-subcommand.md  1.6-feat-add-uu-doctorinfo-subcommand.md  3-vibecheck-improvements-2026-02-27-0539.md  3.1-vibecheck-improve-cratesuusrccmdcirs.md  3.2-vibecheck-improve-cratesuusrccmdcleanrs.md  3.3-vibecheck-improve-cratesuusrcrunnerrs.md  3.4-vibecheck-improve-cratesuusrccmdbuildrs.md  3.5-vibecheck-improve-cratesuusrccmdportsrs.md  3.6-vibecheck-improve-cratesdetectsrclibrs.md  3.7-vibecheck-improve-cratesuutestsclirs.md  3.8-vibecheck-improve-cratesuusrccmddoctorrs.md  3.9-vibecheck-improve-cratesuusrccmdrunrs.md  5-feat-add-uu-map-command-project-manifest-generator.md  5.2-rust-go-language-adapters.md  5.3-python-typescript-javascript-language-adapters.md  5.5-swift-c-cc-language-adapters.md  5.6-nodejs-ecosystem-framework-adapters-nextjs-express.md  5.7-python-rust-framework-adapters-django-fastapi-axum.md  5.8-remaining-framework-adapters-phoenix-ecto-rails-sp.md  5.9-cli-integration-uu-map-command-integration-tests.md  6-production-readiness-fixes-for-uu.md  7-add-new-projectkind-match-arms-to-all-uu-command-f.md  8-fix-uu-install-for-cargo-workspace-roots.md  RULES.md  agent_history.jsonl  archive.yaml  config.yaml  index.yaml
.mana/archive/2026/02/: 1-feat-add-missing-uu-workflow-commands.md  1.7-feat-add-python3pip3-fallback.md  2-vibecheck-improvements-2026-02-27-0446.md  2.1-vibecheck-improve-cratesuusrcrunnerrs.md  2.2-vibecheck-improve-cratesuusrccmdcleanrs.md  2.3-vibecheck-improve-cratesuusrccmdcirs.md  2.4-vibecheck-improve-cratesuusrccmdportsrs.md  2.5-vibecheck-improve-cratesdetectsrclibrs.md  2.6-vibecheck-improve-cratesuusrccmdbuildrs.md  2.7-vibecheck-improve-cratesuutestsclirs.md  2.8-vibecheck-improve-cratesuusrccmdrunrs.md
.mana/archive/2026/03/: 4-uu-dev-workspace-aware-dev-server-command.md  4.1-workspace-detection-in-detect-crate.md  4.2-dev-command-with-concurrent-runner-cli-wiring.md  5.1-manifest-crate-foundation-types-adapter-trait-cont.md  5.4-elixir-java-ruby-language-adapters.md
.mana/archive/2026/04/: 10-replace-uu-install-default-shell-hook-with-hardene.md  11-publish-updated-univ-utils-crate-to-cratesio.md  9-make-uu-install-default-work-across-supported-ecos.md
.vibecheck/: vibecheck.db-shm  vibecheck.db-wal
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: context.rs  diff.rs  lib.rs  schema.rs
crates/manifest/src/adapters/: mod.rs
crates/manifest/src/adapters/framework/: aspnet.rs  authjs.rs  axum.rs  django.rs  ecto.rs  express.rs  fastapi.rs  gin.rs  gorm.rs  mod.rs  nextjs.rs  phoenix.rs  prisma.rs  rails.rs  shadcn.rs  spring.rs
crates/manifest/src/adapters/lang/: c_cpp.rs  csharp.rs  elixir.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs  zig.rs
crates/uu/: Cargo.toml  README.md
crates/uu/src/: main.rs  runner.rs
crates/uu/src/cmd/: build.rs  check.rs  ci.rs  clean.rs  dev.rs  doctor.rs  fmt.rs  install.rs  lint.rs  mod.rs  ports.rs  run.rs  test_cmd.rs
crates/uu/src/cmd/map/: format.rs  generate.rs  mod.rs  query.rs  search.rs  stats.rs  tree.rs
crates/uu/tests/: cli.rs
