[package]
name = "project-detect"
version = "0.1.0"
edition = "2021"
description = "Zero-config project type detection — identify any project's language, build system, and toolchain from directory contents"
license = "MIT"
repository = "https://github.com/kfcafe/project-detect"
keywords = ["project", "detect", "build-system", "language", "toolchain"]
categories = ["development-tools", "filesystem"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
