[package]
name = "uu-manifest"
version = "0.1.0"
edition = "2021"
description = "Project manifest generator for uu — universal utilities"
license = "MIT"

[dependencies]
project-detect = { path = "/Users/asher/project-detect" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
ignore = "0.4"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-zig = "1.1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
