[package]
name = "uu"
version = "0.1.0"
edition = "2021"
description = "Universal utilities — zero-config developer tools that detect your project and do the right thing"
license = "MIT"

[[bin]]
name = "uu"
path = "src/main.rs"

[dependencies]
project-detect = { path = "/Users/asher/project-detect" }
uu-manifest = { path = "../manifest" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
