[package]
name = "univ-utils"
version = "0.1.0"
edition = "2021"
description = "Zero-config project tools that detect your stack and do the right thing"
license = "MIT"
repository = "https://github.com/kfcafe/uu"
keywords = ["cli", "project", "build", "test", "tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "uu"
path = "src/main.rs"

[dependencies]
project-detect = { version = "0.1.2", path = "/Users/asher/project-detect" }
uu-manifest = { version = "0.1.0", path = "../manifest" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
