[package]
name = "univ-utils"
version = "0.1.6"
edition = "2021"
description = "Zero-config project tools for common tasks across many ecosystems"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kfcafe/uu"
keywords = ["cli", "project", "build", "test", "tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "uu"
path = "src/main.rs"

[dependencies]
project-detect = { version = "0.1.2", path = "/Users/asher/project-detect" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
